syntax = "proto3";

option java_multiple_files = true;
option java_package = "marmot.proto.service";

package marmot.proto.service;

import public "marmot.proto";
import public "marmot.service.proto";


service FileService {
	rpc readMarmotFile(stream DownChunkResponse) returns (stream DownChunkRequest);
	
	// 주어진 바이너리 데이터를 지정 경로의 HDFS 파일에 저장함.
	rpc copyToHdfsFile(stream UpChunkRequest) returns (stream UpChunkResponse);
	
	rpc deleteHdfsFile(marmot.proto.StringProto) returns (VoidResponse);
}

message CopyToHdfsFileRequest {
	StringProto path = 1;		// 업로드될 데이터를 저장할 HDFS 파일 경로
	oneof optional_block_size {
		int64 block_size = 2;	// 생성될 HDFS 파일의 블럭 크기. (기본값: 128mb)
	}
	oneof optional_compression_codec_name {
		string compression_codec_name = 3;
	}
	bool use_compression = 4;	// 데이터 송수신할 때 압축사용 여부
}